--- a/7.1-Files-EH-Exercises.md
+++ b/7.1-Files-EH-Exercises.md
@@ -2,6 +2,11 @@
 
 **Problem Statement:** You have a log file (`log.txt`) containing various log entries. Each log entry is a string that may contain errors. Write a Python program to read the log file, identify and count the number of error entries, and write the error entries to a new file (`errors.txt`) for further analysis.
 
+
+<img src="https://drive.google.com/file/d/199VfHzsKCkSI38hG3YLsO-zec7908U1c/view?usp=sharing"
+     alt="flowchart-1"
+     style="float: left; margin-right: 10px;" />
+
 **Solution:**
 
 ```python
