--- a/7.1-Files-EH-Exercises.md
+++ b/7.1-Files-EH-Exercises.md
@@ -2,7 +2,17 @@
 
 **Problem Statement:** You have a log file (`log.txt`) containing various log entries. Each log entry is a string that may contain errors. Write a Python program to read the log file, identify and count the number of error entries, and write the error entries to a new file (`errors.txt`) for further analysis.
 
-![This is an image](https://drive.google.com/file/d/1ps2iaQ5pCaC8iYVVUbdG60NtPVbxaLGp/view?usp=sharing)
+You can use this log file with the provided Python program to count and extract error entries into an log.txt file.
+
+[INFO] Application started.
+[ERROR] An error occurred while processing data: Division by zero.
+[INFO] Processing complete.
+[DEBUG] Debugging information: Variable x = 5, Variable y = 0.
+[ERROR] Another error occurred: File not found.
+[INFO] Application stopped.
+[WARNING] This is a warning message.
+[ERROR] Yet another error: Out of memory.
+[INFO] Application restarted.
 
 **Solution:**
 
