--- a/7.1-Files-EH-Exercises.md
+++ b/7.1-Files-EH-Exercises.md
@@ -2,9 +2,9 @@
 
 **Problem Statement:** You have a log file (`log.txt`) containing various log entries. Each log entry is a string that may contain errors. Write a Python program to read the log file, identify and count the number of error entries, and write the error entries to a new file (`errors.txt`) for further analysis.
 
-You can use this log file with the provided Python program to count and extract error entries into an log.txt file.
+You can use this log file with the provided Python program to count and extract error entries into a log.txt file.
 
-[INFO] Application started.
+[INFO] Application started.<br>
 [ERROR] An error occurred while processing data: Division by zero.
 [INFO] Processing complete.
 [DEBUG] Debugging information: Variable x = 5, Variable y = 0.
