--- a/7.1-Files-EH-Exercises.md
+++ b/7.1-Files-EH-Exercises.md
@@ -5,14 +5,14 @@
 You can use this log file with the provided Python program to count and extract error entries into a log.txt file.
 
 [INFO] Application started.<br>
-[ERROR] An error occurred while processing data: Division by zero.
-[INFO] Processing complete.
-[DEBUG] Debugging information: Variable x = 5, Variable y = 0.
-[ERROR] Another error occurred: File not found.
-[INFO] Application stopped.
-[WARNING] This is a warning message.
-[ERROR] Yet another error: Out of memory.
-[INFO] Application restarted.
+[ERROR] An error occurred while processing data: Division by zero.<br>
+[INFO] Processing complete.<br>
+[DEBUG] Debugging information: Variable x = 5, Variable y = 0.<br>
+[ERROR] Another error occurred: File not found.<br>
+[INFO] Application stopped.<br>
+[WARNING] This is a warning message.<br>
+[ERROR] Yet another error: Out of memory.<br>
+[INFO] Application restarted.<br>
 
 **Solution:**
 
