--- a/7.1-Files-EH-Exercises.md
+++ b/7.1-Files-EH-Exercises.md
@@ -94,6 +94,27 @@ except Exception as e:
 
 **Problem Statement:** You have a binary data file (`data.bin`) containing a sequence of integers. Write a Python program to read the binary data, calculate the sum of all integers, and handle potential file and data parsing errors.
 
+To generate a binary data file (data.bin) containing a sequence of integers, you can use the following Python code to create and write binary data to the file:
+
+```python
+import struct
+
+# Sample sequence of integers
+integers = [10, 20, 30, 40, 50]
+
+try:
+    with open('data.bin', 'wb') as binary_file:
+        for integer in integers:
+            # Pack the integer into 4 bytes using big-endian byte order
+            binary_data = struct.pack('>i', integer)
+            binary_file.write(binary_data)
+    print("Binary data file 'data.bin' created successfully.")
+except Exception as e:
+    print(f"An error occurred: {e}")
+```
+
+This code will create a binary file named data.bin and write the integers from the integers list to the file in 4-byte binary format with big-endian byte order.
+
 **Solution:**
 
 ```python
